优化标签页

--- a/docs/开发文档.md
+++ b/docs/开发文档.md
@@ -2,6 +2,32 @@
 1. 点击 检测重复书签、失效书签、清理书签后，再次点击可暂停
 2. 清理书签功能名称 应该为清理空文件夹
 3. 
+
 # 新增功能
+
+## 书签可视化功能
+1. 新增 `visualization.html` 和 `visualization.js` 文件
+2. 提供美观的卡片式和列表式书签展示界面
+3. 支持搜索、筛选、分页功能
+4. 包含书签统计信息展示
+5. 支持书签的快速操作（打开、编辑、删除）
+6. 响应式设计，适配移动端
+
+### 功能特性
+- **统计面板**: 显示总书签数、文件夹数、最近添加、收藏书签等统计信息
+- **搜索功能**: 支持按标题、URL、文件夹名称搜索
+- **筛选功能**: 支持按全部、最近、收藏、未分类等条件筛选
+- **视图切换**: 支持网格视图和列表视图切换
+- **分页功能**: 支持大量书签的分页显示
+- **快速操作**: 悬停显示操作按钮，支持打开、编辑、删除书签
+- **美观界面**: 采用现代化设计，支持动画效果和响应式布局
+
+### 技术实现
+- 使用Chrome Bookmarks API获取书签数据
+- 采用ES6 Class封装核心逻辑
+- 支持实时搜索和筛选
+- 使用CSS Grid和Flexbox实现响应式布局
+- 添加了丰富的交互动画效果
+
 ## 添加浏览器垂直侧边栏标签
 1. 侧边栏标签提供常用AI工具入口
