--- a/报错信息.md
+++ b/报错信息.md
@@ -1,3 +1,208 @@
+错误
+Refused to execute inline event handler because it violates the following Content Security Policy directive: "script-src 'self'". Either the 'unsafe-inline' keyword, a hash ('sha256-...'), or a nonce ('nonce-...') is required to enable inline execution. Note that hashes do not apply to event handlers, style attributes and javascript: navigations unless the 'unsafe-hashes' keyword is present.
+上下文
+chrome://newtab/
+堆叠追踪
+visualization.html:34 (匿名函数)
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+41
+42
+43
+44
+45
+46
+47
+48
+49
+50
+51
+52
+53
+54
+55
+56
+57
+58
+59
+60
+61
+62
+63
+64
+65
+66
+67
+68
+69
+70
+71
+72
+73
+74
+75
+76
+77
+78
+79
+80
+81
+82
+83
+84
+85
+86
+87
+88
+89
+90
+91
+92
+93
+94
+95
+96
+97
+98
+99
+100
+101
+102
+103
+104
+105
+106
+107
+108
+109
+110
+111
+112
+113
+114
+115
+116
+117
+118
+119
+120
+121
+122
+123
+124
+125
+126
+127
+128
+129
+130
+131
+132
+133
+134
+135
+136
+137
+138
+139
+140
+141
+142
+143
+144
+145
+146
+147
+148
+149
+150
+151
+152
+153
+154
+155
+156
+157
+158
+159
+160
+161
+162
+163
+164
+165
+166
+167
+168
+169
+170
+171
+172
+173
+174
+175
+176
+177
+178
+179
+180
+181
+182
+183
+184
+185
+186
+187
+188
+189
+190
+191
+192
+193
+194
+195
+196
+197
+198
+199
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -7,10 +212,12 @@
     <link rel="stylesheet" href="apple-style.css">
 </head>
 <body class="visualization-page">
+
     <div class="main-container">
         <div id="folder-sidebar">
             <div id="sidebar-controls">
                 <button id="toggle-sidebar-btn" title="收起/展开侧边栏">‹</button>
+                <button id="icon-mode-btn" title="图标模式">◎</button>
             </div>
             <div id="folder-list-container">
                 <!-- Folder list will be loaded here -->
@@ -195,3 +402,31 @@
     <script src="visualization.js"></script>
 </body>
 </html>
+Refused to execute inline event handler because it violates the following Content Security Policy directive: "script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' http://localhost:* http://127.0.0.1:*". Either the 'unsafe-inline' keyword, a hash ('sha256-...'), or a nonce ('nonce-...') is required to enable inline execution. Note that hashes do not apply to event handlers, style attributes and javascript: navigations unless the 'unsafe-hashes' keyword is present.
+Uncaught TypeError: Cannot read properties of null (reading 'addEventListener')
+Uncaught TypeError: Cannot read properties of null (reading 'classList')
+Uncaught TypeError: Cannot read properties of null (reading 'addEventListener')
+Error handling response: TypeError: Cannot set properties of null (setting 'innerHTML')
+Error handling response: TypeError: Cannot set properties of null (setting 'value')
+Uncaught (in promise) TypeError: Cannot read properties of undefined (reading 'add')
+Uncaught ReferenceError: DEFAULT_PROMPT_TEMPLATE is not defined
+Uncaught ReferenceError: analyzeBtn is not defined
+Error handling response: ReferenceError: apiProviderSelect is not defined
+Refused to load the script 'https://cdn.jsdelivr.net/npm/chart.js' because it violates the following Content Security Policy directive: "script-src 'self'". Note that 'script-src-elem' was not explicitly set, so 'script-src' is used as a fallback.
+Refused to load the script 'https://cdn.jsdelivr.net/npm/chart.js' because it violates the following Content Security Policy directive: "script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' http://localhost:* http://127.0.0.1:*". Note that 'script-src-elem' was not explicitly set, so 'script-src' is used as a fallback.
+Refused to execute inline event handler because it violates the following Content Security Policy directive: "script-src 'self'". Either the 'unsafe-inline' keyword, a hash ('sha256-...'), or a nonce ('nonce-...') is required to enable inline execution. Note that hashes do not apply to event handlers, style attributes and javascript: navigations unless the 'unsafe-hashes' keyword is present.
+Refused to execute inline event handler because it violates the following Content Security Policy directive: "script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' http://localhost:* http://127.0.0.1:*". Either the 'unsafe-inline' keyword, a hash ('sha256-...'), or a nonce ('nonce-...') is required to enable inline execution. Note that hashes do not apply to event handlers, style attributes and javascript: navigations unless the 'unsafe-hashes' keyword is present.
+Refused to load the script 'https://cdn.jsdelivr.net/npm/d3@7' because it violates the following Content Security Policy directive: "script-src 'self'". Note that 'script-src-elem' was not explicitly set, so 'script-src' is used as a fallback.
+Refused to load the script 'https://cdn.jsdelivr.net/npm/d3@7' because it violates the following Content Security Policy directive: "script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' http://localhost:* http://127.0.0.1:*". Note that 'script-src-elem' was not explicitly set, so 'script-src' is used as a fallback.
+Refused to execute inline event handler because it violates the following Content Security Policy directive: "script-src 'self'". Either the 'unsafe-inline' keyword, a hash ('sha256-...'), or a nonce ('nonce-...') is required to enable inline execution. Note that hashes do not apply to event handlers, style attributes and javascript: navigations unless the 'unsafe-hashes' keyword is present.
+Refused to execute inline event handler because it violates the following Content Security Policy directive: "script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' http://localhost:* http://127.0.0.1:*". Either the 'unsafe-inline' keyword, a hash ('sha256-...'), or a nonce ('nonce-...') is required to enable inline execution. Note that hashes do not apply to event handlers, style attributes and javascript: navigations unless the 'unsafe-hashes' keyword is present.
+Refused to execute inline script because it violates the following Content Security Policy directive: "script-src 'self'". Either the 'unsafe-inline' keyword, a hash ('sha256-rtH5fszsG2uAKPnjL4q9HM9GzGAMLKInwkjXv9Gwt3Y='), or a nonce ('nonce-...') is required to enable inline execution.
+Refused to execute inline script because it violates the following Content Security Policy directive: "script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' http://localhost:* http://127.0.0.1:*". Either the 'unsafe-inline' keyword, a hash ('sha256-rtH5fszsG2uAKPnjL4q9HM9GzGAMLKInwkjXv9Gwt3Y='), or a nonce ('nonce-...') is required to enable inline execution.
+Uncaught TypeError: Cannot read properties of null (reading 'addEventListener')
+Uncaught (in promise) TypeError: Cannot read properties of undefined (reading 'add')
+JSON解析失败: Error: JSON解析失败，已尝试多种修复方案: Expected ',' or ']' after array element in JSON at position 3691 (line 40 column 230)
+Gemini API调用出错: Error: 无法解析AI返回的JSON: JSON解析失败，已尝试多种修复方案: Expected ',' or ']' after array element in JSON at position 3691 (line 40 column 230)
+分类处理失败: Error: Gemini API调用失败: 无法解析AI返回的JSON: JSON解析失败，已尝试多种修复方案: Expected ',' or ']' after array element in JSON at position 3691 (line 40 column 230)
+JSON解析失败: Error: JSON解析失败，已尝试多种修复方案: Expected ',' or ']' after array element in JSON at position 3020 (line 120 column 6)
+Gemini API调用出错: Error: 无法解析AI返回的JSON: JSON解析失败，已尝试多种修复方案: Expected ',' or ']' after array element in JSON at position 3020 (line 120 column 6)
+分类处理失败: Error: Gemini API调用失败: 无法解析AI返回的JSON: JSON解析失败，已尝试多种修复方案: Expected ',' or ']' after array element in JSON at position 3020 (line 120 column 6)
