--- a/docs/开发文档.md
+++ b/docs/开发文档.md
@@ -1,4 +1,56 @@
-# 书签助手开发文档
+# 书签管理器开发文档
+
+## 版本历史
+
+### v1.5.3 - Favicon显示问题修复 (2024-12-19)
+- **Favicon加载策略重构**
+  - 替换不可访问的Google favicon服务
+  - 实现渐进式favicon加载策略：网站自有图标 → 备用服务 → 本地备用图标
+  - 支持多种图标格式：.ico、.png、apple-touch-icon等
+  - 添加智能错误处理和自动降级
+
+- **图标源优化**
+  - 优先使用网站自己的favicon.ico
+  - 备用方案：DuckDuckGo图标服务、Google备用服务
+  - 本地备用：Lucide图标库的globe图标
+  - 支持不同视图模式下的图标尺寸
+
+- **CSS样式完善**
+  - 添加专门的favicon样式规则
+  - 支持卡片、列表、图标三种视图模式
+  - 添加hover效果和过渡动画
+  - 优化备用图标的显示效果
+
+### v1.5.2 - 网络连接检测优化 (2024-12-19)
+- **网络连接检测重构**
+  - 替换不可访问的Google服务检测地址
+  - 使用多个备用检测地址：httpbin.org、GitHub API、百度、腾讯等
+  - 添加5秒超时机制，避免长时间等待
+  - 实现渐进式检测策略：URL检测 → 本地网络状态 → 网络接口检测
+  - 优化错误处理和日志记录
+
+- **API连接测试增强**
+  - 设置面板中的API测试功能从模拟测试升级为真实测试
+  - 支持Gemini、OpenAI、自定义API的真实连接测试
+  - 分步骤测试：网络连接 → API连接
+  - 提供详细的测试反馈和错误信息
+
+- **备用方案优化**
+  - 网络连接失败时自动切换到预分类模式
+  - 改进预分类算法的日志和反馈
+  - 增强错误恢复机制
+
+### v1.5.1 - 服务初始化修复 (2024-12-19)
+- **修复问题**: 解决了 `this.detectionService.initialize is not a function` 错误
+- **修复内容**:
+  - 在 `DetectionService` 类中添加了 `initialize()` 方法
+  - 在 `VisualizationService` 类中添加了 `initialize()` 方法  
+  - 在 `ImportExportService` 类中添加了 `initialize()` 方法
+  - 在 `BookmarkManager` 类中添加了 `initialize()` 方法
+- **技术细节**: 所有服务模块现在都实现了标准的 `initialize()` 接口
+- **影响范围**: 修复了设置面板初始化失败的问题，确保所有功能正常工作
+
+### v1.5.0 - 设置面板模块化重构 (2025-08-03)
 
 ## 项目概述
 
